--- a/src/main/webapp/css/callsignviz.css
+++ b/src/main/webapp/css/callsignviz.css
@@ -26,7 +26,7 @@ body {
   /* Margin bottom by footer height */
   margin-bottom: 20px;
 }
-.footer {
+.fixed-footer {
   position: absolute;
   bottom: 0;
   width: 100%;
@@ -35,5 +35,29 @@ body {
   background-color: #f5f5f5;
 }
 
+.footer {
+  width: 100%;
+  height: 80px;
+  background-color: #f5f5f5;
+}
+
+
 .angular-google-map-container { height: 450px; }
+
+
+/* ng classes for fade in */
+.fadeInHideShow {
+  -webkit-transition: all linear 1s;
+  transition: all linear 1s;
+  opacity: 1;
+}
+
+.fadeInHideShow.ng-hide {
+  opacity: 0;
+}
+
+/* popuover width */
+.popover-content {
+width: 200px;
+}
 		
