--- a/frontend-angularjs/src/app/mapviz/historyPlaybackControls.html
+++ b/frontend-angularjs/src/app/mapviz/historyPlaybackControls.html
@@ -11,7 +11,8 @@
 				<option value="60">1 hour</option>
 				<option value="120">2 hours</option>
 				<option value="180">3 hours</option>
-			</select> Update rate: <select ng-model="playbackControls.updateRate" ng-change="changeRate()">
+			</select> Update rate: <select ng-model="playbackControls.updateRate"
+										   ng-change="changeRate()">
 				<option value="1">1 secs</option>
 				<option value="2">2 secs</option>
 				<option value="3">3 secs</option>
