--- a/frontend-angularjs/src/app/mapviz/mapviz.html
+++ b/frontend-angularjs/src/app/mapviz/mapviz.html
@@ -1,4 +1,4 @@
-<div ng-controller="SpotVizController">
+<div ng-controller="SpotVizController as spotvizCtrl">
 
             <ul class="nav nav-wizard">
                 <li ui-sref-active="active"><a ui-sref=".selectCallsign" data-toggle="tab">
@@ -15,5 +15,5 @@
     </div>
     
     <div ui-view></div>
-    
+
 </div>
