--- a/frontend-angularjs/src/app/css/callsignviz.css
+++ b/frontend-angularjs/src/app/css/callsignviz.css
@@ -1,3 +1,7 @@
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+    display: none !important;
+}
+
 #myjumbotron {
 	height:120px;
 	padding-top:3px;
