--- a/frontend-angularjs/src/app/index.html
+++ b/frontend-angularjs/src/app/index.html
@@ -2,71 +2,103 @@
 <html ng-app="SpotVizApp">
 <head>
 	<meta charset="UTF-8">
+	<!-- bundled
 	<link href="css/bootstrap-3.3.4-dist/css/bootstrap.css" rel="stylesheet"/>
+	-->
+
+	<!-- bundled
         <link href="css/bootstrap-nav-wizard/bootstrap-nav-wizard.css" rel="stylesheet"/>
         <link rel="stylesheet" type="text/css" href="bower_components/cal-heatmap/cal-heatmap.css">
+	-->
 
+	<!-- bundled
 	<link rel="stylesheet" href="css/callsignviz.css"/>
-
-	<!-- jQuery -->
+	-->
+	<!-- jQuery bundled
 	<link rel="stylesheet" href="bower_components/jquery-ui/themes/smoothness/jquery-ui.css"/>
 	<script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
 	<script type="text/javascript" src="bower_components/jquery-ui/jquery-ui.js"></script>
+	-->
 
-	<!--  Bootstrap js -->
+	<!--  Bootstrap js - bundled
 	<script type="text/javascript" src="css/bootstrap-3.3.4-dist/js/bootstrap.min.js"></script>
+	-->
 	
 	<!-- Angular -->
 	<!--  upgrading to latest -->
 	<!-- <script type="text/javascript" src="bower_components/angular/angular.js"></script> -->
-	<script type="text/javascript" src="node_modules/angular/angular.js"></script>
+	<!-- bundled
+	<script type="text/javascript" src="node_modules/angular/angular.js"></script> -->
+
 	<!-- <script type="text/javascript" src="bower_components/angular-animate/angular-animate.js"></script> -->
+
+	<!-- bundled
 	<script type="text/javascript" src="node_modules/angular-animate/angular-animate.js"></script>
+	-->
+
+	<!-- bundled
 	<script type="text/javascript" src="bower_components/angular-messages/angular-messages.js"></script>
+	-->
+
+	<!-- bundled
 	<script type="text/javascript" src="node_modules/angular-sanitize/angular-sanitize.js"></script>
+	-->
 	
-	<!-- ui-bootstrap -->
+	<!-- ui-bootstrap - bundled
 	<script src="node_modules/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
     <script src="node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
-	
+	-->
 
 	<!-- AngularJS ui-date -->
+	<!-- bundled
 	<script type="text/javascript" src="bower_components/angular-ui-date/src/date.js"></script>
+	-->
         
     <!-- AngularJS ui-router -->
 	<!-- <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.js"></script> -->
+	<!-- bundled
 	<script type="text/javascript" src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
+	-->
 	
-	<!-- Moment.js -->
+	<!-- Moment.js - bundled
 	<script src="bower_components/moment/moment.js"></script>
+	-->
 	
-	<!-- Moment.js -->
+	<!-- bundled
 	<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-	
-    <!-- angular-cal-heatmap-directive -->
+	-->
+
+    <!-- angular-cal-heatmap-directive - bundled
     <script type="text/javascript" src="bower_components/d3/d3.js"></script>
     <script type="text/javascript" src="bower_components/cal-heatmap/cal-heatmap.js"></script>
     <script type="text/javascript" src="bower_components/angular-cal-heatmap-directive/dist/1.3.0/calHeatmap.min.js"></script>
+	-->
 
-    <!-- Angularitics -->    
+    <!-- Angularitics - bundled
     <script type="text/javascript" src="bower_components/angulartics/dist/angulartics.min.js"></script>
     <script type="text/javascript" src="bower_components/angulartics/dist/angulartics-ga.min.js"></script>
-    
-    <!-- ui-leaflet open maps -->
+    -->
+
+    <!-- ui-leaflet open maps - bundled
 	<script src="node_modules/leaflet/dist/leaflet.js"></script>
 	<script src="node_modules/angular-simple-logger/dist/angular-simple-logger.js"></script>
     <script src="node_modules/ui-leaflet/dist/ui-leaflet.js"></script>
     <link rel="stylesheet" href="node_modules/leaflet/dist/leaflet.css">
+	-->
 
+	<!-- bundled
 	<link rel="stylesheet" href="node_modules/ng-dialog/css/ngDialog.min.css">
 	<link rel="stylesheet" href="node_modules/ng-dialog/css/ngDialog-theme-default.min.css">
 	<script src="node_modules/ng-dialog/js/ngDialog.min.js"></script>
+	-->
 
-	<!-- app js -->	
+	<!-- app js -->
+	<!-- moved to bundle
 	<script src="js/SpotVizApp.js"></script>
 	<script src="js/MapVizControllers.js"></script>
 	<script src="js/SpotDataControllers.js"></script>
-	
+	-->
+
 	<!-- Google Analytics -->
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -81,7 +113,7 @@
 	
 </head>
 
-<body>
+<body ng-cloak>
 
 	<div class="container-fluid">
 	
@@ -94,33 +126,56 @@
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                         </p>
 		</div>
-		<div>
-		<nav class="navbar navbar-default">
-			<ul class="nav navbar-nav">
-<!-- 
-				<li><a href="index.html#/">Home</a></li>
-				<li><a href="index.html#/mapviz">Visualize!</a></li>
-				<li><a href="index.html#/upload">How to upload your spots</a></li>
-				<li><a href="index.html#/faq">FAQ</a></li>
-				<li><a href="index.html#/bug">Report a bug/enhancement request</a></li>
-				<li><a href="index.html#/about">About</a></li>
- -->
-				<li><a ui-sref="home">Home</a></li>
-				<li><a ui-sref="visualize.selectCallsign">Visualize!</a></li>
-				<li><a ui-sref="upload">How to upload your spots</a></li>
-				<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Browse uploads<span class="caret"></span></a>
-					<ul class="dropdown-menu">
-						<li><a ui-sref="searchTopUploaders">Show top data uploaders</a></li>
-						<li><a ui-sref="searchUploadsByCallsign">List spot data by callsign</a></li>
-					</ul>
-				</li>
-				<li><a ui-sref="faq">FAQ</a></li>
-				<li><a ui-sref="bug">Report a bug/enhancement request</a></li>
-				<li><a ui-sref="about">About</a></li>
 
-			</ul>
-		</nav>
+
+		<!-- bootstrap3: -->
+		<div>
+			<nav class="navbar navbar-default">
+				<ul class="nav navbar-nav">
+					<li><a ui-sref="home">Home</a></li>
+					<li><a ui-sref="visualize.selectCallsign">Visualize!</a></li>
+					<li><a ui-sref="upload">How to upload your spots</a></li>
+					<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Browse uploads<span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a ui-sref="searchTopUploaders">Show top data uploaders</a></li>
+							<li><a ui-sref="searchUploadsByCallsign">List spot data by callsign</a></li>
+						</ul>
+					</li>
+					<li><a ui-sref="faq">FAQ</a></li>
+					<li><a ui-sref="bug">Report a bug/enhancement request</a></li>
+					<li><a ui-sref="about">About</a></li>
+
+				</ul>
+			</nav>
 		</div>
+
+		<!-- bootstrap 4:
+		<div class="row">
+			<div class="col-md-12">
+				<nav class="navbar navbar-expand-md navbar-fixed-top navbar-light bg-light">
+					<ul class="navbar-nav">
+
+						<li class="nav-item"><a class="nav-link" ui-sref="home">Home</a></li>
+						<li class="nav-item"><a class="nav-link" ui-sref="visualize.selectCallsign">Visualize!</a></li>
+						<li class="nav-item"><a class="nav-link" ui-sref="upload">How to upload your spots</a></li>
+						<li class="nav-item dropdown"><a class="nav-link dropdown-toggle" data-toggle="dropdown"
+														 role="button" aria-haspopup="true" aria-expanded="false">Browse
+							uploads<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a class="nav-link" ui-sref="searchTopUploaders">Show top data uploaders</a></li>
+								<li><a class="nav-link" ui-sref="searchUploadsByCallsign">List spot data by callsign</a>
+								</li>
+							</ul>
+						</li>
+						<li class="nav-item"><a class="nav-link" ui-sref="faq">FAQ</a></li>
+						<li class="nav-item"><a class="nav-link" ui-sref="bug">Report a bug/enhancement request</a></li>
+						<li class="nav-item"><a class="nav-link" ui-sref="about">About</a></li>
+
+					</ul>
+				</nav>
+			</div>
+		</div>
+		-->
 		
 		<!-- <div ng-view></div>  -->
 		<div ui-view></div>
