--- a/frontend-angularjs/src/app/mapviz/selectDateRange.html
+++ b/frontend-angularjs/src/app/mapviz/selectDateRange.html
@@ -45,12 +45,39 @@
                 <label for="fromDate">Staring from date/time:</label>
             </div>
             <div class="col-md-8">
-                <input id="fromDate" class="form-control" ng-model="search.fromDate"
+                <input id="fromDate" class="form-control"
+                       autocomplete="off"
+                       ng-model="search.fromDate"
                        ui-date-format="yy'-'mm'-'dd" ui-date="search.fromDateOptions"
                        popover="Select a start date and time from which to start visualizing your reception data.
                        {{search.popoverTextWhenDataAvailable}}"
                        popover-trigger="focus" />
-                <timepicker ng-model="search.fromTime" minute-step="search.minuteStep"></timepicker>
+                <!-- <timepicker ng-model="search.fromTime" minute-step="search.minuteStep"></timepicker> -->
+                <select ng-model="search.fromTime">
+                    <option value="01:00:00">01:00</option>
+                    <option value="02:00:00">02:00</option>
+                    <option value="03:00:00">03:00</option>
+                    <option value="04:00:00">04:00</option>
+                    <option value="05:00:00">05:00</option>
+                    <option value="06:00:00"selected>06:00</option>
+                    <option value="07:00:00">07:00</option>
+                    <option value="08:00:00">08:00</option>
+                    <option value="09:00:00">09:00</option>
+                    <option value="10:00:00">10:00</option>
+                    <option value="11:00:00">11:00</option>
+                    <option value="12:00:00">12:00</option>
+                    <option value="13:00:00">13:00</option>
+                    <option value="14:00:00">14:00</option>
+                    <option value="15:00:00">15:00</option>
+                    <option value="16:00:00">16:00</option>
+                    <option value="17:00:00">17:00</option>
+                    <option value="18:00:00">18:00</option>
+                    <option value="19:00:00">19:00</option>
+                    <option value="20:00:00">20:00</option>
+                    <option value="21:00:00">21:00</option>
+                    <option value="22:00:00">22:00</option>
+                    <option value="23:00:00">23:00</option>
+                </select>
             </div>
         </div>
 
@@ -59,11 +86,38 @@
                 <label for="toDate">Ending at date:</label>
             </div>
             <div class="col-md-8">
-                <input id="toDate" class="form-control" ng-model="search.toDate"
+                <input id="toDate" class="form-control"
+                       autocomplete="off"
+                       ng-model="search.toDate"
                        ui-date-format="yy'-'mm'-'dd" ui-date="search.toDateOptions"
                        popover="End date/time for received spots" popover-placement="left"
                        popover-trigger="focus" />
-                <timepicker ng-model="search.toTime" minute-step="search.minuteStep"></timepicker>
+                <!-- <timepicker ng-model="search.toTime" minute-step="search.minuteStep"></timepicker>-->
+                <select ng-model="search.toTime">
+                    <option value="01:00:00">01:00</option>
+                    <option value="02:00:00">02:00</option>
+                    <option value="03:00:00">03:00</option>
+                    <option value="04:00:00">04:00</option>
+                    <option value="05:00:00">05:00</option>
+                    <option value="06:00:00"selected>06:00</option>
+                    <option value="07:00:00">07:00</option>
+                    <option value="08:00:00">08:00</option>
+                    <option value="09:00:00">09:00</option>
+                    <option value="10:00:00">10:00</option>
+                    <option value="11:00:00">11:00</option>
+                    <option value="12:00:00">12:00</option>
+                    <option value="13:00:00">13:00</option>
+                    <option value="14:00:00">14:00</option>
+                    <option value="15:00:00">15:00</option>
+                    <option value="16:00:00">16:00</option>
+                    <option value="17:00:00" selected>17:00</option>
+                    <option value="18:00:00">18:00</option>
+                    <option value="19:00:00">19:00</option>
+                    <option value="20:00:00">20:00</option>
+                    <option value="21:00:00">21:00</option>
+                    <option value="22:00:00">22:00</option>
+                    <option value="23:00:00">23:00</option>
+                </select>
             </div>
         </div>
 
@@ -86,12 +140,12 @@
             </div>
             <div class="row" ng-show="search.showDataDensity">
     			<div class="col-md-12">
-        			<cal-heatmap ng-if="search.showDataDensity" config="search.heatmap.config" 
-        				ng-click="showStatsForDate($event)"></cal-heatmap>        
+        			<cal-heatmap ng-if="search.showDataDensity" config="search.heatmap.config"
+        				ng-click="showStatsForDate($event)"></cal-heatmap>
     			</div>
 			</div>
             <div class="panel-body">
-                <p>(TODO: in progress) This chart shows the availability of the uploaded data between your chosen dates. Darker colors indicate
+                <p>This chart shows the availability of the uploaded data between your chosen dates. Darker colors indicate
                     where there is more data available to visualize. If there are many periods with no data available it
                     may be more interesting to select a different date range that covers where you have consecutive
                     periods of data to visualize</p>
