--- a/frontend-angularjs/src/app/mapviz/selectDateRange.html
+++ b/frontend-angularjs/src/app/mapviz/selectDateRange.html
@@ -3,7 +3,8 @@
 	<p>Clicked ts: {{ search.heatmap.clickedDate }}</p>
     <p>First spot received at: {{ search.heatmap.rawdata[search.heatmap.clickedDate/1000].firstSpot.$date }}</p>
     <p>Last spot received at: {{ search.heatmap.rawdata[search.heatmap.clickedDate/1000].lastSpot.$date }}</p>
-	<p>Spot count total for day: {{ search.heatmap.rawdata[search.heatmap.clickedDate/1000].count }}
+    <p>Spot count total for day: {{ search.heatmap.rawdata[search.heatmap.clickedDate/1000].count }}</p>
+    <p><button ng-click="showHeatmapPerHour()">Show heatmap per hour for this day</button></p>
 </script>
 
 <div class="row">
@@ -138,12 +139,37 @@
             <div class="panel-heading">
                 <h3 class="panel-title">Distribution of data for selected date range</h3>
             </div>
+
+
+            <div>
+                $scope.search.showDataDensity: {{ search.showDataDensity }}
+            </div>
+            <div>
+                $scope.search.heatmap.config: {{ search.heatmap.config }}
+            </div>
             <div class="row" ng-show="search.showDataDensity">
     			<div class="col-md-12">
         			<cal-heatmap ng-if="search.showDataDensity" config="search.heatmap.config"
         				ng-click="showStatsForDate($event)"></cal-heatmap>
+                    <button ng-click="showHeatmapPerHour()">Show heatmap per hour for this day</button>
     			</div>
 			</div>
+
+
+            <div>
+                $scope.search.showDataDensityPerHour: {{ search.showDataDensityPerHour }}
+            </div>
+            <div>
+                $scope.search.heatmap.perhourConfig: {{ search.heatmap.perhourConfig }}
+            </div>
+            <div class="row" ng-show="search.showDataDensityPerHour">
+                Test: hourly heatmap here:
+                <div class="col-md-12">
+                    <cal-heatmap ng-if="search.showDataDensityPerHour" config="search.heatmap.perhourConfig"
+                    </cal-heatmap>
+                </div>
+            </div>
+
             <div class="panel-body">
                 <p>This chart shows the availability of the uploaded data between your chosen dates. Darker colors indicate
                     where there is more data available to visualize. If there are many periods with no data available it
