fixed from..to.. in playback

--- a/frontend-angularjs/src/app/mapviz/historyPlaybackControls.html
+++ b/frontend-angularjs/src/app/mapviz/historyPlaybackControls.html
@@ -1,4 +1,6 @@
-
+<!--
+  01/25/2020 No longer as moved inline into playback
+-->
 <div class="row">
 	<div class="col-sm-12">
 		<p>
@@ -40,7 +42,7 @@
 		<div class="row">
 			<div class="col-sm-6">Playing interval
 				{{playbackControls.currentInterval}}</div>
-			<div class="col-sm-6">of {{playbackControls.currentInterval}}</div>
+			<div class="col-sm-6">of {{playbackControls.iterations}}</div>
 		</div>
 		<div class="row">
 			<div class="col-sm-12">
