--- a/frontend-angularjs/src/app/mapviz/playback.html
+++ b/frontend-angularjs/src/app/mapviz/playback.html
@@ -47,7 +47,7 @@
         <div class="row">
             <div class="col-sm-6">Playing interval
                 {{playbackControls.currentInterval}}</div>
-            <div class="col-sm-6">of {{playbackControls.currentInterval}}</div>
+            <div class="col-sm-6">of {{playbackControls.iterations}}</div>
         </div>
         <div class="row">
             <div class="col-sm-12">
