--- a/frontend-angularjs/src/app/howToUpload.html
+++ b/frontend-angularjs/src/app/howToUpload.html
@@ -85,9 +85,23 @@
 
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h3 class="panel-title">WSJT-X on Linux</h3>
+    <h3 class="panel-title">WSJT-X on Raspbian / Raspberry Pi</h3>
   </div>
   <div class="panel-body">
-    TODO
+	  <p>Use:</p>
+	  <ul>
+		  <li>--file /home/pi/.local/share/WSJT-X"</li>
+	  </ul>
+	  <p>... assuming you are running under user "pi" - replace /home/pi with your
+	  current userid as needed.</p>
   </div>
+</div>
+
+<div class="panel panel-default">
+	<div class="panel-heading">
+		<h3 class="panel-title">WSJT-X on Linux</h3>
+	</div>
+	<div class="panel-body">
+		TODO
+	</div>
 </div>
